# Robotic-Arm

./: .gitignore  README.md
Firmware/MANUAL_CONTROL_ALL_MOTORS/: MANUAL_CONTROL_ALL_MOTORS.ino
Firmware/Main/: Main .ino
Firmware/SET_ID_MODE_TORQUE_SCAN/: SET_ID_MODE_TORQUE_SCAN.ino
src/arm_controller/: CMakeLists.txt  package.xml
src/arm_controller/src/: arm_moveit_node.cpp
src/my_robot_bringup/: package.xml
src/my_robot_bringup/config/: my_robot_controllers.yaml
src/my_robot_bringup/launch/: my_robot.launch
src/my_robot_commander/: CMakeLists.txt  package.xml
src/my_robot_commander/launch/: commander_launch.py  test_moveit.launch.xml
src/my_robot_commander/src/: commander.cpp  test2_moveit.cpp  test3_moveit.cpp  test_moveit.cpp
src/my_robot_description/: package.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: arm.xacro  arm_ros2_control.xacro  my_robot.urdf.xacro
src/my_robot_hardware/: CMakeLists.txt  my_robot_hardware.xml  package.xml
src/my_robot_hardware/include/my_robot_hardware/: my_robot_hardware_interface.hpp
src/my_robot_hardware/src/: my_robot_hardware_interface.cpp
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  my_robot.srdf
src/yolo_tracker/: package.xml  setup.py
src/yolo_tracker/yolo_tracker/: __init__.py  yolo_node.py  yolo_node_visual_servoing.py  yolo_planner.py
